--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,8 @@
 org.gradle.daemon=false
 org.gradle.jvmargs=-Xms512M -Xmx1G -Dfile.encoding=UTF-8 -Dconsole.encoding=UTF-8
 org.gradle.configureondemand=false
-ashleyVersion=1.7.4
-box2dlightsVersion=1.5
+anim8Version=0.4.6
 enableGraalNative=false
-gwtFrameworkVersion=2.11.0
-gwtPluginVersion=1.1.29
+graalHelperVersion=2.0.1
 gdxVersion=1.13.0
 projectVersion=1.0.0
