--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,12 @@ dependencies {
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
   api "com.github.tommyettinger:anim8-gdx:$anim8Version"
 
+  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+
+  test {
+    useJUnitPlatform()
+  }
+
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
