--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,5 +29,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+        
       - name: Run tests
         run: ./gradlew test
