--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,3 +34,10 @@ jobs:
         
       - name: Run tests
         run: ./gradlew test
+
+      - name: Upload test report
+        if: failure()  # Only upload if tests fail
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: core/build/reports/tests/test
