--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Test Project
 on:
   pull_request:
     branches:
-      - development 
+      - '*'
       
 jobs:
   test:
@@ -36,7 +36,7 @@ jobs:
         run: ./gradlew test
 
       - name: Upload test report
-        if: failure()  # Only upload if tests fail
+        if: failure() 
         uses: actions/upload-artifact@v3
         with:
           name: test-report
