--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,18 +1,18 @@
-name: Test Project
+name: CI für ColdCase
 
 on:
   pull_request:
     branches:
       - '*'
-      
+
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out the code
         uses: actions/checkout@v3
-        
+
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
@@ -31,13 +31,29 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
-        
+
+      - name: Build the project
+        run: ./gradlew build
+
       - name: Run tests
         run: ./gradlew test
 
       - name: Upload test report
-        
+        if: always()
+        uses: actions/upload-test-report@v2
+        with:
+          path: '**/build/test-results/test/*.xml'
+
+      - name: Upload code coverage report
+        if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: test-report
-          path: core/build/reports/tests/test
+          name: code-coverage-report
+          path: '**/build/reports/jacoco/test/html'
+
+      - name: Archive built artifacts
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: '**/build/libs/*.jar'
