--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -56,6 +56,19 @@ jobs:
         uses: jeantessier/test-summary-action@v1
         if: ${{ always() }}
 
+      - name: JaCoCo Code Coverage Report
+        id: jacoco_reporter
+        uses: PavanMudigonda/jacoco-reporter@v5.0
+        with:
+          coverage_results_path: '**/build/reports/jacoco/test/jacocoTestReport.xml'
+          coverage_report_name: Coverage
+          coverage_report_title: JaCoCo
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          skip_check_run: false
+          minimum_coverage: 80
+          fail_below_threshold: false
+          publish_only_summary: false
+
       - name: Archive built artifacts
         if: always()
         uses: actions/upload-artifact@v3
