--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -59,18 +59,16 @@ jobs:
         uses: jeantessier/test-summary-action@v1
         if: ${{ always() }}
 
-      - name: JaCoCo Code Coverage Report
-        id: jacoco_reporter
-        uses: PavanMudigonda/jacoco-reporter@v5.0
+      - name: Jacoco Report to PR
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.7.1
         with:
-          coverage_results_path: '**/core/build/reports/jacoco/test/jacocoTestReport.xml'
-          coverage_report_name: Coverage
-          coverage_report_title: JaCoCo
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          skip_check_run: false
-          minimum_coverage: 80
-          fail_below_threshold: false
-          publish_only_summary: false
+          paths: ${{ github.workspace }}/build/reports/jacoco/test/jacocoTestReport.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 40
+          min-coverage-changed-files: 60
+          title: Code Coverage
+          update-comment: true
 
       - name: Archive built artifacts
         if: always()
