--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,7 +5,12 @@ dependencies {
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
   api "com.github.tommyettinger:anim8-gdx:$anim8Version"
 
-  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
+  implementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+
+  testImplementation 'org.mockito:mockito-core:4.8.0'
 
   test {
     useJUnitPlatform()
