--- a/assets/.properties
+++ b/assets/.properties
@@ -8,4 +8,4 @@ session_id=12345
 map_path=maps/Map_Mvp
 
 # Define this client as detective- or ghost-only. Possible values: 'detective', 'ghost'
-role=ghost
+role=detective
