--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -143,7 +143,7 @@ tasks.register('release', Zip) {
   }
   from("../assets")
 
-  archiveFileName.set("${appName}-${projectVersion}-release.zip")
+  archiveFileName.set("${appName}-${projectVersion}.zip")
   destinationDirectory = file("$buildDir/release")
 
   doLast {
