Prepare for Jar (Pre-)Release

--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -150,3 +150,9 @@ tasks.register('release', Zip) {
     println 'Build and tests completed successfully. Release package has been created!'
   }
 }
+
+tasks.register('printVersion') {
+  doLast {
+    println "${projectVersion}"
+  }
+}
