--- a/assets/.properties
+++ b/assets/.properties
@@ -5,7 +5,7 @@ websocket_url=82.165.30.116:8080
 session_id=12345
 
 # Path to load the selected map
-map_path=maps/Map_Mvp
+map_path=maps/New_Level_Test
 
 # Define this client as detective- or ghost-only. Possible values: 'detective', 'ghost'
 role=detective
