[#149] new way to get lobby id from server

--- a/assets/.properties
+++ b/assets/.properties
@@ -1,7 +1,8 @@
 # ColdCase-Client Configuration
 
 # Server IP (without 'ws://')
-websocket_url=82.165.30.116:8080
+#websocket_url=82.165.30.116:8080
+websocket_url=localhost:8080
 session_id=12345
 
 # Path to load the selected map
