--- a/assets/.properties
+++ b/assets/.properties
@@ -1,8 +1,7 @@
 # ColdCase-Client Configuration
 
 # Server IP (without 'ws://')
-#websocket_url=82.165.30.116:8080
-websocket_url=localhost:8080
+websocket_url=82.165.30.116:8081
 session_id=12345
 
 # Path to load the selected map
