--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -78,3 +78,50 @@ jobs:
         with:
           name: build-artifacts
           path: '**/build/libs/*.jar'
+  generate javadoc:
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
+      # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+        with:
+          gradle-version: 8.9
+
+      - name: Build Documentation
+        run: |
+          gradle javadoc
+          mkdir -p ../pages-out/java-docs/
+          mv build/docs/javadoc/* ../pages-out/java-docs/
+        # zip -r build/docs/common-javadocs.zip build/docs/*
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Package and upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ../pages-out/java-docs/
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
+
+
+
