--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -106,7 +106,7 @@ jobs:
         run: |
           gradle javadoc
           mkdir -p ../pages-out/java-docs/
-          mv build/docs/javadoc/* ../pages-out/java-docs/
+          mv **/build/docs/javadoc/* ../pages-out/java-docs/
         # zip -r build/docs/common-javadocs.zip build/docs/*
 
       - name: Setup Pages
