--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -78,49 +78,19 @@ jobs:
         with:
           name: build-artifacts
           path: '**/build/libs/*.jar'
+
+
+
   generate-javadoc:
-    permissions:
-      contents: write
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-
-      # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-      # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-        with:
-          gradle-version: 8.10.2
-
-      - name: Build Documentation
-        run: |
-          gradle javadoc
-          mkdir -p ../pages-out/java-docs/lwjgl3/
-          mkdir -p ../pages-out/java-docs/core/
-          mv lwjgl3/build/docs/javadoc/* ../pages-out/java-docs/lwjgl3/
-          mv core/build/docs/javadoc/* ../pages-out/java-docs/core/
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Package and upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ../pages-out/java-docs/
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          - name: Deploy javadoc to Github Pages
+            uses: dev-vince/actions-publish-javadoc@v1.0.1
+            with:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              java-version: "21"
+              project: gradle
+              branch: "gh-pages"
 
 
 
