added javadoc deployment to github pages

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -82,6 +82,8 @@ jobs:
 
 
   generate-javadoc:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
           - name: Deploy javadoc to Github Pages
