--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -86,13 +86,35 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     steps:
-          - name: Deploy javadoc to Github Pages
-            uses: dev-vince/actions-publish-javadoc@v1.0.1
-            with:
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              java-version: "21"
-              project: gradle
-              branch: "gh-pages"
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
+      # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+        with:
+          gradle-version: 8.10.2
+
+      - name: Build Client Documentation
+        working-directory: ClodCase-Client
+        run: |
+          gradle javadoc
+          mkdir -p ../pages-out/java-docs/client/core/
+          mv core/build/docs/javadoc/* ../pages-out/java-docs/core/
+
+      - name: Push to branch
+        uses: s0/git-publish-subdir-action@develop
+        env:
+          REPO: self
+          BRANCH: gh-pages # The branch name where you want to push the assets
+          FOLDER: pages-out/ # The directory where your assets are generated
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
+          MESSAGE: "Build: ({sha}) {msg}" # The commit message
 
 
 
