--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -105,7 +105,7 @@ jobs:
         run: |
           gradle javadoc
           mkdir -p ../pages-out/java-docs/core/
-          cd build
+          cd build/docs
           ls
           mv ./docs/javadoc/* ../pages-out/java-docs/core/
 
