--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -105,9 +105,7 @@ jobs:
         run: |
           gradle javadoc
           mkdir -p ../pages-out/java-docs/core/
-          cd build/docs
-          ls
-          mv /javadoc/* ../pages-out/java-docs/core/
+          mv /build/docs/javadoc/* ../pages-out/java-docs/core/
 
       - name: Push to branch
         uses: s0/git-publish-subdir-action@develop
