--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,13 @@ configure(subprojects) {
   }
 }
 
+javadoc {
+  version = '$projectVersion'
+  options {
+    windowTitle = "hallo2"
+  }
+}
+
 subprojects {
   version = '$projectVersion'
   ext.appName = 'Cold Case'
