added javadoc deployment to github pages

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -19,6 +19,10 @@ dependencies {
   }
 
   javadoc {
+    version = '$projectVersion'
+    options {
+      windowTitle = "hallo2"
+    }
     configure( options ) {
       tags(
         'apiNote:a:"API Note:"',
